--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
+# zookeeper ≈‰÷√
 elasticjob.zookeeper.server-list=localhost:2181
-elasticjob.zookeeper.namespace=springboot-elasticjob
+elasticjob.zookeeper.namespace=springboot-elastic-job
+
+#  ˝æ›ø‚¡¨Ω”≈‰÷√
+spring.datasource.url=jdbc:mysql://localhost:3306/job_test?serverTimezone=Asia/Shanghai&userSSL=false&characterEncoding=UTF-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+
+# mybatis ≈‰÷√
+mybatis.mapper-locations=/mybatis/*.xml
