--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-# zookeeper ≈‰÷√
+# zookeeper \u914D\u7F6E
 elasticjob.zookeeper.server-list=localhost:2181
 elasticjob.zookeeper.namespace=springboot-elastic-job
 
-#  ˝æ›ø‚¡¨Ω”≈‰÷√
+# \u6570\u636E\u5E93\u8FDE\u63A5\u914D\u7F6E
 spring.datasource.url=jdbc:mysql://localhost:3306/job_test?serverTimezone=Asia/Shanghai&userSSL=false&characterEncoding=UTF-8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 
-# mybatis ≈‰÷√
+# mybatis \u914D\u7F6E
 mybatis.mapper-locations=/mybatis/*.xml
